fixed empty gap at bottom of footer

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,3 +1,7 @@
+html {
+    height: 100%;
+}
+
 h1 {
     color: #fff0c8;
     text-align: center;
@@ -142,7 +146,6 @@ footer {
     width: 100%;
     padding: 0%;
     margin: 0%;
-    height: 100%;
 }
 
 table {
